update onboarding to fix video preview clipping

--- a/src/app/[slug]/lobby/Lobby.module.scss
+++ b/src/app/[slug]/lobby/Lobby.module.scss
@@ -1,3 +1,5 @@
+$mobileBreakpoint: 800px;
+
 .lobbyContainer {
   display: flex;
   flex-direction: column;
@@ -7,7 +9,7 @@
 }
 
 .onboardingContainer {
-  width: 90%;
+  // width: 90%;
   max-width: 1200px;
 
   height: 100%;
@@ -19,20 +21,42 @@
   .header {
     margin-top: 3rem;
     margin-bottom: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
   }
 
   .questionsAndAvatarPreview {
+    margin-left: 3rem;
+    margin-right: 3rem;
     display: flex;
+    // flex-grow: 1;
+    flex-flow: row wrap;
     flex-direction: row;
     // margin: 2rem;
     width: 100%;
     // padding: 3rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    // padding-left: 2rem;
+    // padding-right: 2rem;
     justify-content: space-evenly;
 
+    @media (min-width: #{$mobileBreakpoint}) {
+      flex-grow: 1;
+    }
+    @media (max-width: #{$mobileBreakpoint}) {
+      margin-left: 0px;
+      margin-right: 0px;
+    }
 
     .questions {
+      width: 50%;
+      order: 0;
+      @media (max-width: #{$mobileBreakpoint}) {
+        order: 1;
+        width: 90%;
+        margin-left:auto;
+        margin-right:auto;
+      }
+
       .nameInputAndLabel {
         display: flex;
         flex-direction: column;
@@ -73,7 +97,6 @@
       }
     }
 
-
     .entranceButtons {
       display: flex;
       flex-direction: row;
@@ -84,7 +107,8 @@
 
     .avatarPreviewContainer {
       overflow: hidden;
-      height: 100%;
+      min-height:300px;
+      width: 50%;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -92,15 +116,17 @@
       align-items: center;
       position: relative;
 
+      @media (max-width: #{$mobileBreakpoint}) {
+        width: 100%;
+      }
+
       .svgAndVideo {
-        width: 400px;
         height: 200px;
         position: relative;
-
         margin-left: auto;
         margin-right: auto;
         align-items: center;
-        display:flex;
+        display: flex;
 
         video {
           height: 200px;
@@ -110,34 +136,13 @@
 
         svg {
           position: absolute;
-          width: 200px;
           top: 0px;
-          left: 100px;
+          margin-left: auto;
+          margin-right:auto;
+          overflow: visible;
         }
       }
 
-
-
-      // svg {
-      //   position: absolute;
-      //   width: 200px;
-      //   height: 200px;
-      //   top: 0px;
-      //   left: 0px;
-      // }
-      // .circleMask {
-      //   position: absolute;
-      //   width: 200px;
-      //   height: 200px;
-      //   top: 0;
-      //   left: 0;
-      //   pointer-events: none;
-
-      //   svg {
-      //     width: 100%;
-      //     height: 100%;
-      //   }
-      // }
       .avatarPreviewAndLabel {
         text-align: center;
       }
